--- a/test/contact-form.html
+++ b/test/contact-form.html
@@ -35,7 +35,7 @@
 
           <div class="form__group">
             <label class="form__label screen-reader-text" for="form-email">Your Email</label>
-            <input class="form__input" id="form-email" type="email" name="email"
+            <input class="form__input" id="form-email" type="text" name="email"
                    placeholder="Your email...">
           </div>
 
